Exploring expression data from roadmap and protein atlas

--- a/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
+++ b/notebook/2020-09-07-annotations/2020-09-07-annotations.ipynb
@@ -22,6 +22,7 @@
     "from bsmcalls import individuals\n",
     "from bsmcalls import readVCF\n",
     "from bsmcalls import SNPnexus\n",
+    "from bsmcalls import operations\n",
     "from bsmcalls import preprocessing\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -101,9 +102,9 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "MultiIndex: 11824 entries, ('AN02255', 'frontal cortex', '1', 4798634, 'T/G') to ('UMB914', 'frontal cortex', 'X', 130133640, 'C/T')\n",
-      "Columns: 130 entries, REF to remm_ReMM Score\n",
-      "dtypes: Int64(23), category(47), float64(50), int64(2), object(8)\n",
-      "memory usage: 9.4+ MB\n"
+      "Columns: 133 entries, REF to remm_ReMM Score\n",
+      "dtypes: Int64(23), category(47), float64(50), int64(2), object(11)\n",
+      "memory usage: 9.7+ MB\n"
      ]
     }
    ],
@@ -138,9 +139,9 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "MultiIndex: 6426 entries, ('CMC_MSSM_027', '1', 11973569, 'C/T') to ('UMB914', 'X', 130133640, 'C/T')\n",
-      "Columns: 130 entries, REF to remm_ReMM Score\n",
-      "dtypes: Int64(23), category(47), float64(50), int64(2), object(8)\n",
-      "memory usage: 5.3+ MB\n"
+      "Columns: 133 entries, REF to remm_ReMM Score\n",
+      "dtypes: Int64(23), category(47), float64(50), int64(2), object(11)\n",
+      "memory usage: 5.4+ MB\n"
      ]
     }
    ],
@@ -177,33 +178,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dummify numeric variables in order to calculate correlation matrix"
+    "## Some checks\n",
+    "Let's look at the consistency between the `ensembl_.*` and the `near_gens_Overlapped Gene` columns!  There are more calls annotated (i.e not `NaN`) by `ensembl_.*` than by `near_gens_Overlapped Gene`:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "263 non overlapping genes in with some predicted function in ensembl\n",
+      "0 overlapping genes in without any predicted function in ensembl\n"
+     ]
+    }
+   ],
    "source": [
-    "#datanum = preprocessing.dummify_df(data)"
+    "ensembl_pred_fun = operations.anyquery('ensembl_Predicted Function', data).iloc[:, 0]\n",
+    "near_gens_overlap = operations.anyquery('near_gens_Overlapped Gene', data).iloc[:, 0]\n",
+    "print(sum(ensembl_pred_fun & ~ near_gens_overlap), 'non overlapping genes in with some predicted function in ensembl')\n",
+    "print(sum(~ ensembl_pred_fun & near_gens_overlap), 'overlapping genes in without any predicted function in ensembl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But the only inconsistency between the `ensembl_.*` and the `near_gens_Overlapped Gene` columns is at where `ensembl_Predicted Function` is either `3downstream` or `5upstream`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'3downstream', '5upstream'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def corrmatplot(dfnum):\n",
-    "    corrmat = dfnum.corr()\n",
-    "    fig, ax = plt.subplots(figsize=(8,8))\n",
-    "    sm.graphics.plot_corr(corrmat, ax=ax, xnames=dfnum.columns, ynames=dfnum.columns)\n",
-    "    cb = plt.colorbar(ax.get_images()[0])\n",
-    "    cb.set_label('Correlation')\n",
-    "    return((fig, ax))\n",
-    "\n",
-    "#fig, ax = corrmatplot(datanum)"
+    "s = data.loc[(ensembl_pred_fun & ~ near_gens_overlap), 'ensembl_Predicted Function']\n",
+    "S = set()\n",
+    "s.dropna().apply(lambda x: S.update(x))\n",
+    "S"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The conclusion from this bit of analysis is that the `ensembl_Symbol` column has the same information as `near_gens_Overlapped Gene` and the thus `ensembl_Gene` can be used to query with stable ensembl IDs instead of unstable symbols (gene names)."
    ]
   },
   {
@@ -230,13 +264,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 53763,\n",
-      "  \"iopub_port\": 53021,\n",
-      "  \"stdin_port\": 60157,\n",
-      "  \"control_port\": 34465,\n",
-      "  \"hb_port\": 39563,\n",
+      "  \"shell_port\": 44005,\n",
+      "  \"iopub_port\": 41107,\n",
+      "  \"stdin_port\": 59801,\n",
+      "  \"control_port\": 52345,\n",
+      "  \"hb_port\": 43023,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"7dfa234b-fe91a55f6f424e7a53077247\",\n",
+      "  \"key\": \"07abedbc-7752c57903b8267c720ba677\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -245,7 +279,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-54a61a9b-348c-4ba3-95eb-27b125e73b6d.json\n",
+      "    $> jupyter <app> --existing kernel-11bbdcbc-e740-4e7a-a832-cd580a9dd664.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
