submitted corrected manifests to NDA

--- a/notebook/2020-12-28-nda-resubmit/2020-12-28-nda-resubmit.ipynb
+++ b/notebook/2020-12-28-nda-resubmit/2020-12-28-nda-resubmit.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,10 @@
      "output_type": "stream",
      "text": [
       "big\n",
+      "big.tar\n",
       "genomics_sample03.csv\n",
+      "genomics_sample03-fix.csv\n",
+      "genomics_sample03-old.csv\n",
       "genomics_subject02.csv\n",
       "nichd_btb02.csv\n",
       "submission_13812_files.csv\n"
@@ -42,8 +45,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The difference between `genomics_sample03.csv` and `genomics_sample03-old.csv` is that the former contains a `sex` column, without which `genomics_sample03.csv` fails validation with an error.  The `sex` column did not use to be part of genomics_sample03 manifests but now it does; see [the specification](https://nda.nih.gov/data_structure.html?short_name=genomics_sample03).  For the error see `/home/attila/NDAValidationResults/validation_results_20210129T115207.csv`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +63,8 @@
       "#! /usr/bin/env bash\n",
       "\n",
       "#d=/home/attila/projects/bsm/ndar/benchmark/vt-python/test0\n",
-      "d=`dirname $0`\n",
+      "d=$1\n",
+      "#d=`realpath $1`\n",
       "f1=$d/nichd_btb02.csv\n",
       "f2=$d/genomics_subject02.csv\n",
       "f3=$d/genomics_sample03.csv\n",
@@ -62,11 +73,14 @@
       "\t$f1 $f2 $f3 \\\n",
       "    -u attilagk \\\n",
       "    -p Chesslab13 \\\n",
-      "    -m $d \\\n",
-      "    -l $d \\\n",
       "    -a BSMN-S3 \\\n",
+      "    -l $d \\\n",
       "    -t \"Chess lab\" \\\n",
-      "    -d \"FASTQs and BAMs of the Chess lab data\" #-b\n"
+      "    -d \"FASTQs and BAMs of the Chess lab data\" -b\n",
+      "\n",
+      "exit\n",
+      "\n",
+      "    -m $d \\\n"
      ]
     }
    ],
@@ -77,14 +91,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Process is interrupted.\n"
+      "Running NDATools Version 0.2.3\n",
+      "Opening log: /home/attila/NDAValidationResults/debug_log_20210129T124035.txt\n",
+      "\n",
+      "Validating files...\n",
+      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20210129T124035.csv\n",
+      "\n",
+      "Note: Your data has warnings. To save warnings, run again with -w argument.\n",
+      "\n",
+      "All files have finished validating.\n",
+      "\n",
+      "The following files passed validation:\n",
+      "UUID 82807df6-1bc5-433d-88e4-a5937ed8d0f7: /home/attila/projects/bsm/results/2020-12-28-nda-resubmit/submission_13889/genomics_subject02.csv\n",
+      "UUID 08de684d-5b84-4a19-afd3-7fc25fbbc5b1: /home/attila/projects/bsm/results/2020-12-28-nda-resubmit/submission_13889/nichd_btb02.csv\n",
+      "UUID 52ee9897-016c-4a99-a323-c2d803c85a0f: /home/attila/projects/bsm/results/2020-12-28-nda-resubmit/submission_13889/genomics_sample03.csv\n",
+      "\n",
+      "Searching for associated files...\n",
+      "Building Package\n",
+      "\n",
+      "\n",
+      "Package Information:\n",
+      "validation results: ['82807df6-1bc5-433d-88e4-a5937ed8d0f7', '52ee9897-016c-4a99-a323-c2d803c85a0f', '08de684d-5b84-4a19-afd3-7fc25fbbc5b1']\n",
+      "submission_package_uuid: b091ee8f-4e5e-4301-b31f-a93ae991556b\n",
+      "created date: 2021-01-29T12:40:38.422-0500\n",
+      "expiration date: 2021-01-30T12:40:38.422-0500\n",
+      "\n",
+      "Package finished building.\n",
+      "\n",
+      "Downloading submission package.\n",
+      "\n",
+      "A copy of your submission package has been saved to: NDASubmission_attilagk_1611942038786/NDASubmissionPackages\n",
+      "Requesting submission for package: b091ee8f-4e5e-4301-b31f-a93ae991556b\n",
+      "Submission ID: 35570\n",
+      "Preparing to upload associated files.\n",
+      "\n",
+      "Uploads complete.\n",
+      "Checking Submission Status.\n",
+      "\n",
+      "You have successfully completed uploading files for submission 35570 with status: Submitted_Prototype\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/3 [00:00<?, ?it/s]\r",
+      " 33%|███▎      | 1/3 [00:00<00:01,  1.03it/s]\r",
+      " 67%|██████▋   | 2/3 [00:01<00:00,  1.27it/s]\r",
+      "100%|██████████| 3/3 [00:01<00:00,  1.71it/s]\r",
+      "100%|██████████| 3/3 [00:01<00:00,  1.99it/s]\n",
+      "\r",
+      "Submission Package Download:   0%|          | 0.00/20.7k [00:00<?, ?bytes/s]\r",
+      "Submission Package Download:  77%|███████▋  | 16.0k/20.7k [00:00<00:00, 47.0kbytes/s]\r",
+      "Submission Package Download: 20.8kbytes [00:00, 26.9kbytes/s]                        \r",
+      "Submission Package Download: 20.8kbytes [00:00, 29.7kbytes/s]\n",
+      "\r",
+      "Total Upload Progress: 0.00bytes [00:00, ?bytes/s]\r",
+      "Total Upload Progress: 0.00bytes [00:07, ?bytes/s]\n"
      ]
     }
    ],
@@ -94,92 +165,6 @@
     "if true; then\n",
     "    ./submit.sh $d\n",
     "fi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running NDATools Version 0.2.3\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20201228T143444.txt\n",
-      "usage: vtcmd <file_list>\n",
-      "\n",
-      "This application allows you to validate files and submit data into NDA. You\n",
-      "must enter a list of at least one file to be validated. If your data contains\n",
-      "manifest files, you must specify the location of the manifests. If your data\n",
-      "also includes associated files, you must enter a list of at least one\n",
-      "directory where the associated files are saved. Alternatively, if any of your\n",
-      "data is stored in AWS, you must provide your account credentials, the AWS\n",
-      "bucket, and a prefix, if it exists. Any files that are created while running\n",
-      "the client (ie. results files) will be downloaded in your home directory under\n",
-      "NDAValidationResults. If your submission was interrupted in the middle, you\n",
-      "may resume your upload by entering a valid submission ID.\n",
-      "\n",
-      "positional arguments:\n",
-      "  <file_list>           Returns validation results for list of files\n",
-      "\n",
-      "optional arguments:\n",
-      "  -h, --help            show this help message and exit\n",
-      "  -l <directory_list> [<directory_list> ...], --listDir <directory_list> [<directory_list> ...]\n",
-      "                        Specifies the directories in which the associated\n",
-      "                        files are files located.\n",
-      "  -m <arg> [<arg> ...], --manifestPath <arg> [<arg> ...]\n",
-      "                        Specifies the directories in which the manifest files\n",
-      "                        are located\n",
-      "  -s3 <arg>, --s3Bucket <arg>\n",
-      "                        Specifies the s3 bucket in which the associated files\n",
-      "                        are files located.\n",
-      "  -pre <arg>, --s3Prefix <arg>\n",
-      "                        Specifies the s3 prefix in which the associated files\n",
-      "                        are files located.\n",
-      "  -w, --warning         Returns validation warnings for list of files\n",
-      "  -a <arg>, --alternateEndpoint <arg>\n",
-      "                        An alternate upload location for the submission\n",
-      "                        package\n",
-      "  -b, --buildPackage    Flag whether to construct the submission package\n",
-      "  -c <arg>, --collectionID <arg>\n",
-      "                        The NDA collection ID\n",
-      "  -d <arg> [<arg> ...], --description <arg> [<arg> ...]\n",
-      "                        The description of the submission\n",
-      "  -t <arg> [<arg> ...], --title <arg> [<arg> ...]\n",
-      "                        The title of the submission\n",
-      "  -u <arg>, --username <arg>\n",
-      "                        NDA username\n",
-      "  -ak <arg>, --accessKey <arg>\n",
-      "                        AWS access key\n",
-      "  -sk <arg>, --secretKey <arg>\n",
-      "                        AWS secret key\n",
-      "  -p <arg>, --password <arg>\n",
-      "                        NDA password\n",
-      "  -s <arg>, --scope <arg>\n",
-      "                        Flag whether to validate using a custom scope. Must\n",
-      "                        enter a custom scope\n",
-      "  -r, --resume          Restart an in-progress submission, resuming from the\n",
-      "                        last successful part in a multi-partupload. Must enter\n",
-      "                        a valid submission ID.\n",
-      "  -v <arg>, --validationAPI <arg>\n",
-      "                        URL of the validation tool API\n",
-      "  -j, --JSON            Flag whether to additionally download validation\n",
-      "                        results in JSON format.\n",
-      "  -wt <arg>, --workerThreads <arg>\n",
-      "                        Number of worker threads\n",
-      "  -bc <arg>, --batch <arg>\n",
-      "                        Batch size\n",
-      "  --hideProgress        Hides upload/processing progress\n",
-      "  --skipLocalAssocFileCheck\n",
-      "                        Not recommended UNLESS you have already verified all\n",
-      "                        paths for associated data files are correct\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "vtcmd -h"
    ]
   },
   {
