--- a/notebook/2021-02-02-submit-to-nda/2021-02-02-submit-to-nda.ipynb
+++ b/notebook/2021-02-02-submit-to-nda/2021-02-02-submit-to-nda.ipynb
@@ -752,283 +752,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cram\n",
-      "Running NDATools Version 0.2.3\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20210203T221214.txt\n",
-      "\n",
-      "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20210203T221214.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20210203T221214.csv\n",
-      "\n",
-      "All files have finished validating.\n",
-      "\n",
-      "The following files passed validation:\n",
-      "UUID 257914cb-445a-4398-9dc5-16d2668232f2: genomics_sample03-cram.csv\n",
-      "UUID a20f5739-0230-4f0c-9a99-c1f0667910dc: genomics_subject02-2021-02-02.csv\n",
-      "UUID 779c13a5-183f-4f7d-b961-e1df2ed85373: nichd_btb02-2021-02-02.csv\n",
-      "Enter title for dataset name:----\n",
-      "cram.crai\n",
-      "Running NDATools Version 0.2.3\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20210203T221216.txt\n",
-      "\n",
-      "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20210203T221216.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20210203T221216.csv\n",
-      "\n",
-      "All files have finished validating.\n",
-      "\n",
-      "The following files passed validation:\n",
-      "UUID 38cf65e4-2776-4abf-b855-99df20f9f7b7: nichd_btb02-2021-02-02.csv\n",
-      "UUID ed89c15f-5c20-4b6d-a651-70780fc7f689: genomics_subject02-2021-02-02.csv\n",
-      "UUID f9ba0dbc-9568-4abe-a12c-93c76b4acee4: genomics_sample03-cram.crai.csv\n",
-      "Enter title for dataset name:----\n",
-      "flagstat.txt\n",
-      "Running NDATools Version 0.2.3\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20210203T221218.txt\n",
-      "\n",
-      "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20210203T221218.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20210203T221218.csv\n",
-      "\n",
-      "All files have finished validating.\n",
-      "\n",
-      "The following files passed validation:\n",
-      "UUID 2e83f00b-1fda-40be-bdbc-36bd48db4d22: nichd_btb02-2021-02-02.csv\n",
-      "UUID 138137b8-88ad-4b8b-bfa2-7cea0ae6b1b5: genomics_sample03-flagstat.txt.csv\n",
-      "UUID 8f9f9287-a0c9-4d57-8f73-338e31f1dd0b: genomics_subject02-2021-02-02.csv\n",
-      "Enter title for dataset name:----\n",
-      "ploidy_2.vcf.gz\n",
-      "Running NDATools Version 0.2.3\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20210203T221220.txt\n",
-      "\n",
-      "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20210203T221220.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20210203T221220.csv\n",
-      "\n",
-      "All files have finished validating.\n",
-      "\n",
-      "The following files passed validation:\n",
-      "UUID 08d837d5-7a34-442d-affd-e5a14cf1e011: nichd_btb02-2021-02-02.csv\n",
-      "UUID c9cc3bb2-214d-49fa-bd2d-8bd05fedaec3: genomics_subject02-2021-02-02.csv\n",
-      "UUID c37d25b4-9122-4500-bca3-0a38d40efe15: genomics_sample03-ploidy_2.vcf.gz.csv\n",
-      "Enter title for dataset name:----\n",
-      "ploidy_2.vcf.gz.tbi\n",
-      "Running NDATools Version 0.2.3\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20210203T221221.txt\n",
-      "\n",
-      "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20210203T221222.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20210203T221222.csv\n",
-      "\n",
-      "All files have finished validating.\n",
-      "\n",
-      "The following files passed validation:\n",
-      "UUID f7cec924-d9ca-4629-a4e5-ec82f32129ff: genomics_sample03-ploidy_2.vcf.gz.tbi.csv\n",
-      "UUID bf63de8d-2e2a-40dd-b9e9-d2d713db876c: genomics_subject02-2021-02-02.csv\n",
-      "UUID f38fc5c5-4ee7-48eb-b2f8-3602aed6d922: nichd_btb02-2021-02-02.csv\n",
-      "Enter title for dataset name:----\n",
-      "ploidy_12.vcf.gz\n",
-      "Running NDATools Version 0.2.3\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20210203T221224.txt\n",
-      "\n",
-      "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20210203T221224.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20210203T221224.csv\n",
-      "\n",
-      "All files have finished validating.\n",
-      "\n",
-      "The following files passed validation:\n",
-      "UUID 601305eb-02d4-4871-bbd4-c831c2870773: nichd_btb02-2021-02-02.csv\n",
-      "UUID 8b98d726-8a06-42c6-aa2e-18e1d1063b49: genomics_subject02-2021-02-02.csv\n",
-      "UUID 571064e7-cc1c-4e30-93f2-ab87e6516ff8: genomics_sample03-ploidy_12.vcf.gz.csv\n",
-      "Enter title for dataset name:----\n",
-      "ploidy_12.vcf.gz.tbi\n",
-      "Running NDATools Version 0.2.3\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20210203T221226.txt\n",
-      "\n",
-      "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20210203T221226.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20210203T221226.csv\n",
-      "\n",
-      "All files have finished validating.\n",
-      "\n",
-      "The following files passed validation:\n",
-      "UUID 84ba246b-daff-4813-82cf-1d00c695f431: genomics_subject02-2021-02-02.csv\n",
-      "UUID af05e18f-273e-4653-b35b-10336997d2d8: nichd_btb02-2021-02-02.csv\n",
-      "UUID fa1e7843-a6a4-41b2-b0d4-9b4e1aac1961: genomics_sample03-ploidy_12.vcf.gz.tbi.csv\n",
-      "Enter title for dataset name:----\n",
-      "ploidy_50.vcf.gz\n",
-      "Running NDATools Version 0.2.3\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20210203T221227.txt\n",
-      "\n",
-      "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20210203T221228.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20210203T221228.csv\n",
-      "\n",
-      "All files have finished validating.\n",
-      "\n",
-      "The following files passed validation:\n",
-      "UUID d60f8b1f-7c55-4d8a-bba0-4f7a7a753915: genomics_subject02-2021-02-02.csv\n",
-      "UUID 556e0996-d3d9-46d5-a494-58667c002240: nichd_btb02-2021-02-02.csv\n",
-      "UUID bea23421-6307-4bd4-b5f8-7397b5538f5c: genomics_sample03-ploidy_50.vcf.gz.csv\n",
-      "Enter title for dataset name:----\n",
-      "ploidy_50.vcf.gz.tbi\n",
-      "Running NDATools Version 0.2.3\n",
-      "Opening log: /home/attila/NDAValidationResults/debug_log_20210203T221229.txt\n",
-      "\n",
-      "Validating files...\n",
-      "Validation report output to: /home/attila/NDAValidationResults/validation_results_20210203T221229.csv\n",
-      "Warnings output to: /home/attila/NDAValidationResults/validation_results_20210203T221229.csv\n",
-      "\n",
-      "All files have finished validating.\n",
-      "\n",
-      "The following files passed validation:\n",
-      "UUID f4bfa448-6f90-43e5-ba28-1eabc5d5c3b5: genomics_subject02-2021-02-02.csv\n",
-      "UUID 01de61e3-6258-43d4-be4f-40abedd69b0a: nichd_btb02-2021-02-02.csv\n",
-      "UUID 73927e79-564e-4a35-a9c0-a90bfc3a1d02: genomics_sample03-ploidy_50.vcf.gz.tbi.csv\n",
-      "Enter title for dataset name:----\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:01<00:02,  1.38s/it]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.00it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.87it/s]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/attila/.local/bin/vtcmd\", line 8, in <module>\n",
-      "    sys.exit(main())\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 290, in main\n",
-      "    package_results = build_package(uuid, associated_files, config=config)\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 226, in build_package\n",
-      "    config.title = input('Enter title for dataset name:')\n",
-      "EOFError: EOF when reading a line\n",
-      "\r",
-      "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:00<00:01,  1.13it/s]\r",
-      " 67%|██████▋   | 2/3 [00:01<00:00,  1.40it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.84it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  2.13it/s]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/attila/.local/bin/vtcmd\", line 8, in <module>\n",
-      "    sys.exit(main())\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 290, in main\n",
-      "    package_results = build_package(uuid, associated_files, config=config)\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 226, in build_package\n",
-      "    config.title = input('Enter title for dataset name:')\n",
-      "EOFError: EOF when reading a line\n",
-      "\r",
-      "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:00<00:01,  1.20it/s]\r",
-      " 67%|██████▋   | 2/3 [00:01<00:00,  1.52it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.91it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  2.30it/s]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/attila/.local/bin/vtcmd\", line 8, in <module>\n",
-      "    sys.exit(main())\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 290, in main\n",
-      "    package_results = build_package(uuid, associated_files, config=config)\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 226, in build_package\n",
-      "    config.title = input('Enter title for dataset name:')\n",
-      "EOFError: EOF when reading a line\n",
-      "\r",
-      "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:00<00:01,  1.20it/s]\r",
-      " 67%|██████▋   | 2/3 [00:01<00:00,  1.56it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  2.71it/s]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/attila/.local/bin/vtcmd\", line 8, in <module>\n",
-      "    sys.exit(main())\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 290, in main\n",
-      "    package_results = build_package(uuid, associated_files, config=config)\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 226, in build_package\n",
-      "    config.title = input('Enter title for dataset name:')\n",
-      "EOFError: EOF when reading a line\n",
-      "\r",
-      "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:01<00:02,  1.11s/it]\r",
-      " 67%|██████▋   | 2/3 [00:01<00:00,  1.15it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.48it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.76it/s]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/attila/.local/bin/vtcmd\", line 8, in <module>\n",
-      "    sys.exit(main())\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 290, in main\n",
-      "    package_results = build_package(uuid, associated_files, config=config)\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 226, in build_package\n",
-      "    config.title = input('Enter title for dataset name:')\n",
-      "EOFError: EOF when reading a line\n",
-      "\r",
-      "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:00<00:01,  1.06it/s]\r",
-      " 67%|██████▋   | 2/3 [00:01<00:00,  1.38it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  2.49it/s]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/attila/.local/bin/vtcmd\", line 8, in <module>\n",
-      "    sys.exit(main())\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 290, in main\n",
-      "    package_results = build_package(uuid, associated_files, config=config)\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 226, in build_package\n",
-      "    config.title = input('Enter title for dataset name:')\n",
-      "EOFError: EOF when reading a line\n",
-      "\r",
-      "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:00<00:01,  1.02it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.38it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  2.29it/s]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/attila/.local/bin/vtcmd\", line 8, in <module>\n",
-      "    sys.exit(main())\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 290, in main\n",
-      "    package_results = build_package(uuid, associated_files, config=config)\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 226, in build_package\n",
-      "    config.title = input('Enter title for dataset name:')\n",
-      "EOFError: EOF when reading a line\n",
-      "\r",
-      "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:00<00:01,  1.01it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.38it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  2.30it/s]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/attila/.local/bin/vtcmd\", line 8, in <module>\n",
-      "    sys.exit(main())\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 290, in main\n",
-      "    package_results = build_package(uuid, associated_files, config=config)\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 226, in build_package\n",
-      "    config.title = input('Enter title for dataset name:')\n",
-      "EOFError: EOF when reading a line\n",
-      "\r",
-      "  0%|          | 0/3 [00:00<?, ?it/s]\r",
-      " 33%|███▎      | 1/3 [00:00<00:01,  1.04it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  1.44it/s]\r",
-      "100%|██████████| 3/3 [00:01<00:00,  2.71it/s]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/attila/.local/bin/vtcmd\", line 8, in <module>\n",
-      "    sys.exit(main())\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 290, in main\n",
-      "    package_results = build_package(uuid, associated_files, config=config)\n",
-      "  File \"/home/attila/.local/lib/python3.7/site-packages/NDATools/clientscripts/vtcmd.py\", line 226, in build_package\n",
-      "    config.title = input('Enter title for dataset name:')\n",
-      "EOFError: EOF when reading a line\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "cd ~/projects/bsm/results/2021-02-02-submit-to-nda\n",
-    "validate=\"vtcmd -b -s3 nda-bsmn-scratch -pre 3338602 -u $NDA_USER -p $NDA_PASSWORD -c 2965 -w  -t title -d description\"\n",
+    "validate=\"vtcmd -b -t title -d description -s3 nda-bsmn-scratch -pre 3338602 -u $NDA_USER -p $NDA_PASSWORD -c 2965 -w\"\n",
     "manifests=\"nichd_btb02-2021-02-02.csv genomics_subject02-2021-02-02.csv\"\n",
-    "dftypes=\"cram cram.crai flagstat.txt ploidy_2.vcf.gz ploidy_2.vcf.gz.tbi ploidy_12.vcf.gz ploidy_12.vcf.gz.tbi ploidy_50.vcf.gz ploidy_50.vcf.gz.tbi\"\n",
+    "dftypes=\"cram.crai cram flagstat.txt ploidy_2.vcf.gz ploidy_2.vcf.gz.tbi ploidy_12.vcf.gz ploidy_12.vcf.gz.tbi ploidy_50.vcf.gz ploidy_50.vcf.gz.tbi\"\n",
     "for dftype in $dftypes; do\n",
     "echo $dftype\n",
     "$validate $manifests genomics_sample03-$dftype.csv\n",
@@ -1038,36 +770,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"shell_port\": 34869,\n",
-      "  \"iopub_port\": 42471,\n",
-      "  \"stdin_port\": 58131,\n",
-      "  \"control_port\": 38257,\n",
-      "  \"hb_port\": 58923,\n",
-      "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"dd2d1bbc-23ffdb9ef3b30854b6460fed\",\n",
-      "  \"transport\": \"tcp\",\n",
-      "  \"signature_scheme\": \"hmac-sha256\",\n",
-      "  \"kernel_name\": \"\"\n",
-      "}\n",
-      "\n",
-      "Paste the above JSON into a file, and connect with:\n",
-      "    $> jupyter <app> --existing <file>\n",
-      "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-b2759800-5071-41de-be61-ce4144813a56.json\n",
-      "or even just:\n",
-      "    $> jupyter <app> --existing\n",
-      "if this is the most recent Jupyter kernel you have started.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%connect_info"
    ]
