new figures for regression results

--- a/presentations/2021-02-27-imprinting-bsm/2021-02-27-imprinting-bsm.tex
+++ b/presentations/2021-02-27-imprinting-bsm/2021-02-27-imprinting-bsm.tex
@@ -413,9 +413,7 @@ gerp  & 127 & 1 + Dx + BaseQRankSum + AF + DP  \\
 \end{frame}
 
 \begin{frame}{Enrichment of somatic SNVs in various categories}
-\includegraphics[width=1.0\textwidth]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/scz-effect-pois-binom.pdf}
-
-\includegraphics[width=1.0\textwidth]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/asd-effect-pois-binom.pdf}
+\includegraphics[width=1.0\columnwidth]{../../notebook/2021-01-26-indiv-counts-modeling/named-figure/relcallrates-betas-binom-chisq-pvalues.pdf}
 \end{frame}
 
 \end{document}
