Restarted submissions to NDA after PC shutdown

--- a/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
+++ b/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
@@ -3537,7 +3537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3546,7 +3546,7 @@
        "['named-figure/enrichment-5-plots.png', 'named-figure/enrichment-5-plots.pdf']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3639,12 +3639,12 @@
     "    return((fig, ax))\n",
     "\n",
     "fig, ax = plot5panels(only_scz=False)\n",
-    "attila_utils.savefig(fig, 'enrichment-5-plots"
+    "attila_utils.savefig(fig, 'enrichment-5-plots')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3662,7 +3662,7 @@
        " 'named-figure/enrichment-5-plots_scz.pdf']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3686,7 +3686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3695,7 +3695,7 @@
        "['named-figure/enrichment-chisq.png', 'named-figure/enrichment-chisq.pdf']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3730,7 +3730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3748,7 +3748,7 @@
        " 'named-figure/enrichment-chisq_scz.pdf']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3772,7 +3772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3782,7 +3782,7 @@
        " 'named-figure/enrichment-model-chisq.pdf']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3818,7 +3818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -3836,7 +3836,7 @@
        " 'named-figure/enrichment-model-chisq_scz.pdf']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3860,7 +3860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -3870,7 +3870,7 @@
        " 'named-figure/age-effect-pois-binom.pdf']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3908,7 +3908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3918,7 +3918,7 @@
        " 'named-figure/binom-four-resid-types.pdf']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3942,7 +3942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3952,7 +3952,7 @@
        " 'named-figure/binom-four-resid-types_scz.pdf']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3983,7 +3983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -3992,7 +3992,7 @@
        "['named-figure/resid-pois.png', 'named-figure/resid-pois.pdf']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4016,7 +4016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -4025,7 +4025,7 @@
        "['named-figure/resid-pois_scz.png', 'named-figure/resid-pois_scz.pdf']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4049,7 +4049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -4058,7 +4058,7 @@
        "['named-figure/resid-binom.png', 'named-figure/resid-binom.pdf']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4082,7 +4082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -4091,7 +4091,7 @@
        "['named-figure/resid-binom_scz.png', 'named-figure/resid-binom_scz.pdf']"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4115,7 +4115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4125,7 +4125,7 @@
        " 'named-figure/scz_gwas_genes-poisson-partial-resid-plot_scz.pdf']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4153,7 +4153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -4161,13 +4161,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 48657,\n",
-      "  \"iopub_port\": 50863,\n",
-      "  \"stdin_port\": 50223,\n",
-      "  \"control_port\": 38973,\n",
-      "  \"hb_port\": 40145,\n",
+      "  \"shell_port\": 52083,\n",
+      "  \"iopub_port\": 41105,\n",
+      "  \"stdin_port\": 48297,\n",
+      "  \"control_port\": 38937,\n",
+      "  \"hb_port\": 35717,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"58166c77-71875f6a662d2ecfd63d05e0\",\n",
+      "  \"key\": \"8c43e53f-49cc4e367dbc32b8259b2dfa\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -4176,7 +4176,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-02d594d4-615b-417f-b789-9128b167e3a8.json\n",
+      "    $> jupyter <app> --existing kernel-12f64472-f189-4cf5-b626-38bb882fbae9.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
